<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment"
        android:background="@drawable/background">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="98dp"
                  android:gravity="center_horizontal">>
        <TextView android:id="@+id/textview2"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/register"
                  android:textColor="@color/black"
                  android:textSize="25dp"
                  android:layout_marginTop="15dp"
                  android:layout_gravity="center"
                  android:textStyle="italic"/>
    </LinearLayout>

    <EditText
            android:id="@+id/username_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:textColorHint="@color/black"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:drawablePadding="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="180dp"/>

    <EditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:drawablePadding="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="240dp"/>
    <EditText
            android:id="@+id/conpassword_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confim_password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:textSize="20dp"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="300dp"/>

    <Button
            android:id="@+id/btn_register_reg"
            android:layout_width="200dp"
            android:layout_height="63dp"
            android:text="Register"
            android:textSize="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/conpassword_reg"
            android:layout_alignParentStart="true"
            android:layout_marginStart="121dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="90dp"/>
    <TextView
            android:id="@+id/textView_reg"
            android:layout_width="253dp"
            android:layout_height="51dp"
            android:text="@string/already_have_an_account"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="68dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="89dp"
            android:layout_below="@+id/btn_register_reg"/>
</RelativeLayout>